convert to oxyplot

--- a/examples/Example.csproj
+++ b/examples/Example.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OxyPlot.Wpf" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\smurves\Smurves.csproj" />
   </ItemGroup>
 
